deployment/metabase-service.yml
apiVersion: v1
kind: Service
metadata:
  name: metabase-svc
spec:
  selector:
    app: metabase
  ports:
    - port: 80
      targetPort: 3000
